--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-to-text": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.13",
     "uuid": "^8.3.2"
   },
