--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formidable": "^1.2.2",
     "html-to-text": "^8.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.3",
     "mongoose": "^6.0.10",
     "multer": "^1.4.3",
     "nodemon": "^2.0.13",
