--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.10",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
     "uuid": "^8.3.2"
   },
