--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
+    "stripe": "^8.191.0",
     "uuid": "^8.3.2"
   },
   "engines": {
